[workspace]
members = [
    "libretro-proxy", "rcheevos-hash-sys",
]

[package]
name = "retro_scripting"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
name = "retro_scripting_libretro"

[dependencies]
libretro-proxy = { path = "libretro-proxy" }
jsonrpc-http-server = "18.0.0"
serde_json = "1.0.133"
