[package]
name = "libretro-proxy"
version = "0.2.0"
edition = "2021"
description = "Write libretro cores that act as a proxy to other cores."
repository = "https://github.com/danxexe/retro-scripting"
license = "MIT"
keywords = ["libretro", "retroarch", "emulator", "core", "proxy"]
categories = ["emulators", "external-ffi-bindings", "game-development", "development-tools::ffi"]

[dependencies]
rust-libretro-sys = "0.3.2"
libloading = "0.8"

[dev-dependencies]
cargo_metadata = "0.19.1"
glob = "0.3.1"
rust-libretro-example-core = "0.3.2"
